--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -18,3 +18,13 @@
     height: 5em;
 
 }
+
+#character {
+    margin-top: 100px;
+    font-size: 108px;
+    text-align: center;
+}
+
+#strokes {
+    text-align: center;
+}
