--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -6,18 +6,20 @@
     background-color:antiquewhite;
 }
 
-#keyboard .key{
+#keyboard .key-wrapper{
+    display:block;
+    font-family: monospace;
+    width: 80%;
+    left: 10%;
+    margin-top: .5em;
+    margin-bottom: .5em;
     
-    background-color: lightcyan;
-    padding: 2em;
-    
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    
-    height: 5em;
-
 }
+
+#keyboard .content{
+    font-size: 30px;
+}
+
 
 #character {
     margin-top: 100px;
