key turn red when make mistakes

--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -17,6 +17,10 @@
     margin-bottom: .5em;
 }
 
+#keyboard .key-wrapper.error {
+    background-color: deeppink;
+}
+
 #keyboard .number {
     display: block;
 }
