--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 
 #character {
     margin-top: 100px;
-    font-size: 108px;
+    font-size: 4.4em;
     text-align: center;
 }
 
@@ -12,18 +12,18 @@
 
 #character .previous {
     text-align: right;
-    font-size: 70px;
-    padding-top: 25px;
     opacity: .3;
 }
 
-#character .current {
+#character-wrapper{
+    height: 50%;
+    font-size: 16px;
+}
 
+#character .current {
 }
 
 #character .next {
-    text-align: left;
-    font-size: 70px;
-    padding-top: 25px;
+    text-align: left;    
     opacity: .3;
 }
