--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,16 @@
+html {
+  margin: 0 auto;
+  padding: 0;
+  overflow-x: hidden;
+}
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+    font-size:16px;
+}
 
 #character {
-    margin-top: 1em;
+    margin-top: 100px;
     font-size: 4.4em;
     text-align: center;
 }
@@ -17,7 +27,6 @@
 
 #character-wrapper{
     height: 50%;
-    font-size: 1em;
 }
 
 #character .current {
