--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -48,3 +48,8 @@ font-size:16px;
     padding-top: .5em;
     font-size: 1em;
 }
+#keyboard .col-xs-3{
+    padding-left: .2em;
+    padding-right: .2em;
+}
+
