--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -26,6 +26,8 @@ font-size:16px;
     margin-right: auto;
     margin-top: .5em;
     margin-bottom: .5em;
+    padding-left:.4em;
+    padding-right:.4em;
 }
 
 #keyboard .key-wrapper.error {
@@ -41,7 +43,7 @@ font-size:16px;
 
 
 #keyboard .content {
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 #keyboard .content.font-small{
