--- a/styles/menu.css
+++ b/styles/menu.css
@@ -19,11 +19,12 @@
     top: 0;
 }
 
-.historyPage {
+#historyPage {
     display: block;
     position: fixed;
     height: 100%;
     width: 100%;
+
     background-color: rgba(255,255,255,.8);
     z-index: 3;
     overflow-y: scroll;
